objects/agf__ADM_Priority_Override__c.object
<CustomObject>
    <description>Used to track the exception reason for a priority override</description>
    <fields>
        <fullName>agf__Priority_Default__c</fullName>
        <label>Priority (default)</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Priority_Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Priority Mapping</label>
        <referenceTo>agf__ADM_Priority_Mapping__c</referenceTo>
        <relationshipLabel>Priority Overrides</relationshipLabel>
        <relationshipName>Priority_Overrides</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Priority_Override_Explanation__c</fullName>
        <label>Priority Override Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Priority__c</fullName>
        <label>Priority</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Work__c</fullName>
        <label>Work</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipLabel>Priority Overrides</relationshipLabel>
        <relationshipName>Priority_Overrides</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Priority Override</label>
    <listViews>
        <fullName>agf__All</fullName>
        <columns>agf__Priority_Override_Explanation__c</columns>
        <columns>agf__Work__c</columns>
        <columns>agf__Priority__c</columns>
        <columns>agf__Priority_Default__c</columns>
        <columns>agf__Priority_Mapping__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PO-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Priority Overrides</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>